--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.1",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.1",
